fix!: notification channel id should not be localized

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">WG Tunnel</string>
-    <string name="vpn_channel_id">VPN Channel</string>
+    <string name="vpn_channel_id" translatable="false">VPN Channel</string>
     <string name="vpn_channel_name">VPN Notification Channel</string>
 	<string name="github_url" translatable="false">https://github.com/zaneschepke/wgtunnel/issues</string>
     <string name="docs_url" translatable="false">https://zaneschepke.com/wgtunnel-docs/overview.html</string>
@@ -186,7 +186,7 @@
 	<string name="allow_lan_traffic">Allow LAN traffic</string>
 	<string name="bypass_lan_for_kill_switch">Bypass LAN for kill switch</string>
 	<string name="vpn_channel_description">A channel for VPN state notifications</string>
-	<string name="auto_tunnel_channel_id">Auto-tunnel Channel</string>
+	<string name="auto_tunnel_channel_id" translatable="false">Auto-tunnel Channel</string>
 	<string name="auto_tunnel_channel_name">Auto-tunnel Notification Channel</string>
 	<string name="auto_tunnel_channel_description">A channel for auto-tunnel state notifications</string>
 	<string name="stop">stop</string>
