fix: weblate conflicts (#519)
Co-authored-by: lateweb <weblate@techkoala.net>
Co-authored-by: Anonymous <noreply@weblate.org>
Co-authored-by: Matthaiks <kitynska@gmail.com>
Co-authored-by: Tom <weblate.delicate088@passinbox.com>
Co-authored-by: Hosted Weblate <hosted@weblate.org>
Co-authored-by: MouaisTe44 <r.craft.212121@gmail.com>
Co-authored-by: Languages add-on <noreply-addon-languages@weblate.org>
Co-authored-by: Julian Madsen <julian@sopyt.com>
Co-authored-by: tomo90 <ivanek.tomas@gmail.com>
Co-authored-by: solokot <solokot@gmail.com>
Co-authored-by: Marco <16669146+RodoMa92@users.noreply.github.com>

--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -1,2 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources></resources>
+<resources>
+    <string name="error_file_extension">Il file non è .conf o .zip</string>
+    <string name="save_changes">Salva</string>
+    <string name="allowed_ips">IP consentiti</string>
+    <string name="endpoint">Endpoint</string>
+    <string name="done">Fatto</string>
+    <string name="interface_">Interfaccia</string>
+    <string name="rotate_keys">Ruota chiavi</string>
+    <string name="private_key">Chiave privata</string>
+    <string name="base64_key">chiave base64</string>
+    <string name="comma_separated_list">elenco separato da virgola</string>
+    <string name="listen_port">Porta d\'ascolto</string>
+    <string name="error_authorization_failed">Autorizzazione fallita</string>
+    <string name="error_no_file_explorer">Nessun esploratore di file installato</string>
+    <string name="error_invalid_code">QR code non valido</string>
+    <string name="app_name">Tunnel WG</string>
+    <string name="vpn_channel_id">Canale VPN</string>
+    <string name="vpn_channel_name">Canale di notifica VPN</string>
+    <string name="watcher_channel_id">Canale d\'osservazione</string>
+    <string name="watcher_channel_name">Canale di notifica d\'osservazione</string>
+    <string name="turn_off_tunnel">L\'operaz. richiede la disatt. del tunnel</string>
+    <string name="icon">Icona</string>
+    <string name="public_key">Chiave pubblica</string>
+    <string name="addresses">Indirizzi</string>
+    <string name="dns_servers">Server DNS</string>
+    <string name="enabled_app_shortcuts">Abilita le scorciatoie da app</string>
+    <string name="export_configs">Esporta configurazioni</string>
+    <string name="email_subject">Supporto di Tunnel WG</string>
+    <string name="email_chooser">Invia un email…</string>
+    <string name="docs_description">Read the docs</string>
+    <string name="email_description">Mandami un\'email (in inglese)</string>
+    <string name="no_tunnels">Ancora nessun tunnel aggiunto!</string>
+    <string name="peer">Peer</string>
+    <string name="mtu">MTU</string>
+    <string name="random">(casuale)</string>
+    <string name="optional">(opzionale)</string>
+    <string name="optional_no_recommend">(opzionale, non raccomandato)</string>
+    <string name="preshared_key">Chiave pre-condivisa</string>
+    <string name="error_authentication_failed">Autenticazione fallita</string>
+    <string name="tunnels">Tunnels</string>
+    <string name="tunnel_mobile_data">Tunnel su dati mobili</string>
+    <string name="privacy_policy">Guarda la policy sulla privacy</string>
+    <string name="okay">Okay</string>
+    <string name="tunnel_on_ethernet">Tunnel su ethernet</string>
+    <string name="name">Nome</string>
+    <string name="always_on_vpn_support">Permetti VPN sempre attiva</string>
+    <string name="location_services_not_detected">Servizi di localizzazione non rilevati</string>
+    <string name="hint_search_packages">Cerca pacchetti</string>
+    <string name="db_name">wg-tunnel-db</string>
+    <string name="auto_tunneling">Tunnel automatico</string>
+    <string name="vpn_on">VPN on</string>
+    <string name="vpn_off">VPN off</string>
+    <string name="create_import">Crea da zero</string>
+    <string name="turn_on_tunnel">L\'operazione richiede un tunnel attivo</string>
+    <string name="add_peer">Aggiungi peer</string>
+    <string name="copy_public_key">Copia chiave pubblica</string>
+    <string name="seconds">secondi</string>
+    <string name="persistent_keepalive">Keepalive persistente</string>
+    <string name="cancel">Annulla</string>
+    <string name="unknown_error">Avvenuto errore sconosciuto</string>
+    <string name="tunnel_on_wifi">Tunnel su wifi non fidato</string>
+    <string name="use_kernel">Usa modulo kernel</string>
+    <string name="error_ssid_exists">L\'SSID esiste già</string>
+    <string name="error_root_denied">Shell di root negata</string>
+</resources>
