--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="turn_off_tunnel">请关闭连接再操作</string>
-    <string name="no_tunnels">你还没有添加隧道！</string>
-    <string name="tunnels">连接列表</string>
+    <string name="turn_off_tunnel">请先关闭连接再操作</string>
+    <string name="no_tunnels">您还没有添加隧道！</string>
+    <string name="tunnels">隧道列表</string>
     <string name="privacy_policy">查看隐私政策</string>
-    <string name="tunnel_mobile_data">允许隧道使用手机数据流量</string>
+    <string name="tunnel_mobile_data">允许隧道使用数据流量</string>
     <string name="okay">好</string>
     <string name="tunnel_on_ethernet">在局域网中使用隧道</string>
     <string name="error_file_extension">文件类型不是 .conf 或 .zip</string>
@@ -23,7 +23,7 @@
     <string name="allowed_ips">允许的 IP</string>
     <string name="name">名称</string>
     <string name="peer">节点</string>
-    <string name="always_on_vpn_support">允许VPN始终在线</string>
+    <string name="always_on_vpn_support">允许 VPN 始终在线</string>
     <string name="location_services_not_detected">定位服务未开启</string>
     <string name="hint_search_packages">查找软件包</string>
 	<string name="done">完成</string>
@@ -34,7 +34,7 @@
     <string name="optional">(可选)</string>
     <string name="optional_no_recommend">(可选，不建议)</string>
     <string name="error_authorization_failed">验证失败</string>
-    <string name="enabled_app_shortcuts">创建快捷方式到桌面</string>
+    <string name="enabled_app_shortcuts">创建桌面快捷方式</string>
     <string name="export_configs">导出设置</string>
     <string name="docs_description">阅读文档</string>
     <string name="email_description">给作者发邮件</string>
@@ -51,7 +51,7 @@
     <string name="base64_key">Base64 编码</string>
     <string name="use_kernel">使用内核模块</string>
     <string name="endpoint">端点</string>
-    <string name="thank_you">谢谢使用 WG Tunnel!</string>
+    <string name="thank_you">谢谢您使用 WG Tunnel!</string>
     <string name="prominent_background_location_message">此功能是在应用关闭时，后台自动扫描 Wi-Fi SSID，需要开启后台位置信息访问权限。更多信息，请在支持页面查看隐私政策。</string>
     <string name="vpn_on">VPN 已连接</string>
     <string name="vpn_off">VPN 已关闭</string>
@@ -72,15 +72,15 @@
     <string name="auto_tunnel_title">自动连接服务</string>
     <string name="delete_tunnel">删除隧道</string>
     <string name="delete_tunnel_message">确定删除这个隧道吗？</string>
-    <string name="location_services_missing_message">此应用不会在你的设备上检测任何已开启的定位服务。根据不同的设备，可能会导致无法获得不可信 WiFi 的名称。你想继续吗？</string>
+    <string name="location_services_missing_message">此应用不会在您的设备上检测任何已开启的定位服务。根据不同的设备，可能会导致无法获得不可信 WiFi 的名称。您想继续吗？</string>
     <string name="yes">是</string>
-    <string name="tunneling_apps">正使用隧道的应用</string>
+    <string name="tunneling_apps">正在使用隧道的应用</string>
     <string name="included">已包含</string>
     <string name="excluded">排除</string>
     <string name="all">全部</string>
     <string name="no_email_detected">未安装邮件应用</string>
     <string name="enable_app_lock">锁定应用</string>
-    <string name="use_tunnel_on_wifi_name">在指定的wifi上使用此隧道</string>
+    <string name="use_tunnel_on_wifi_name">在指定的 WiFi 上使用此隧道</string>
     <string name="version">版本</string>
     <string name="settings">设置</string>
     <string name="support">支持</string>
@@ -90,13 +90,14 @@
     <string name="root_accepted">已获取 root 权限</string>
     <string name="default_ping_ip">(可选，默认选择节点)</string>
     <string name="set_custom_ping_internal">Ping 间隔(秒)</string>
-    <string name="optional_default">"可选，默认: "</string>
+    <string name="optional_default">"可选，默认： "</string>
     <string name="set_custom_ping_cooldown">Ping 重启间隔(秒)</string>
     <string name="show_amnezia_properties">显示 Amnezia 属性</string>
     <string name="no_browser_detected">没有安装浏览器</string>
     <string name="incorrect_pin">密码不正确</string>
     <string name="set_custom_ping_ip">自定义 Ping 的目标 ip</string>
-	<string name="junk_packet_count">无效包计数</string>
+    <string name="watcher_channel_name">守护者通知频道</string>
+    <string name="junk_packet_count">无效包计数</string>
     <string name="app_name">WG Tunnel</string>
     <string name="vpn_channel_name">VPN 通知频道</string>
     <string name="open_issue">查看问题</string>
@@ -106,7 +107,7 @@
     <string name="enter_pin">输入密码</string>
     <string name="create_pin">创建密码</string>
     <string name="set_primary_tunnel">设置为主隧道</string>
-    <string name="mobile_data_tunnel">允许使用手机数据流量</string>
+    <string name="mobile_data_tunnel">允许使用数据流量</string>
     <string name="init_packet_junk_size">初始化无效包大小</string>
     <string name="junk_packet_maximum_size">无效包最大值</string>
     <string name="response_packet_magic_header">响应包的 magic header</string>
@@ -139,18 +140,18 @@
     <string name="language">语言</string>
     <string name="add_wifi_name">添加 WiFi SSID</string>
     <string name="primary_tunnel">主隧道</string>
-    <string name="mobile_tunnel">允许使用移动数据</string>
+    <string name="mobile_tunnel">使用数据流量</string>
     <string name="add_from_clipboard">从剪贴板添加</string>
     <string name="transport_packet_magic_header">传输包的 magic header</string>
     <string name="underload_packet_magic_header">欠载数据包 magic header</string>
     <string name="restart_at_boot">开机时重新启动</string>
     <string name="background_location_message">需要允许所有时间位置权限和/或精确位置才能使用此功能。请参阅</string>
     <string name="learn_more">了解更多</string>
-    <string name="unsure_how">如果你不确定如何进行</string>
-    <string name="see_the">见</string>
+    <string name="unsure_how">如果您不确定如何进行</string>
+    <string name="see_the">请查阅</string>
     <string name="getting_started_guide">入门指南</string>
     <string name="selected">已选择</string>
-    <string name="on_demand_rules">按需隧道规则</string>
+    <string name="on_demand_rules">自定义隧道规则</string>
     <string name="skip">取消</string>
     <string name="launch_app_settings">打开应用设置</string>
     <string name="use_wildcards">使用 SSID 通配符</string>
@@ -163,7 +164,7 @@
     <string name="stop_auto">停止自动隧道</string>
     <string name="tunnel_running">隧道运行中</string>
     <string name="donate">捐赠</string>
-    <string name="local_logging">开启日志</string>
+    <string name="local_logging">日志</string>
     <string name="enable_local_logging">开启本地日志</string>
     <string name="configuration_change">配置更改</string>
     <string name="requires_app_relaunch">此更改需要重新启动应用程序。您是否要继续？</string>
