feat: toggle to set amnezia/wg compatibility values
closes #469
closes #518

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -191,4 +191,7 @@
 	<string name="pre_down">Pre down</string>
 	<string name="post_down">Post down</string>
     <string name="amnezia_kernel_message">Amnezia unavailable in kernel mode</string>
+    <string name="enable_amnezia">Enable Amnezia</string>
+	<string name="wg_compat_mode">WG compatibility mode</string>
+	<string name="quick_actions">Quick actions</string>
 </resources>
