feat: add setting for debounce delay tuning
closes #493

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -194,4 +194,6 @@
     <string name="enable_amnezia">Enable Amnezia</string>
 	<string name="wg_compat_mode">WG compatibility mode</string>
 	<string name="quick_actions">Quick actions</string>
+    <string name="advanced_settings">Advanced settings</string>
+	<string name="debounce_delay">Debounce delay</string>
 </resources>
