feat(lang): weblate localization changes (#530)
Co-authored-by: Matthaiks <kitynska@gmail.com>
Co-authored-by: Languages add-on <noreply-addon-languages@weblate.org>
Co-authored-by: solokot <solokot@gmail.com>
Co-authored-by: Kachelkaiser <kachelkaiser@outlook.com>
Co-authored-by: L.y <lycidias@gmail.com>

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -5,7 +5,7 @@
     <string name="no_tunnels">Noch keine Tunnel hinzugefügt!</string>
     <string name="tunnels">Tunnel</string>
     <string name="tunnel_mobile_data">Tunnel für mobile Daten</string>
-    <string name="privacy_policy">Siehe Privacy Policy</string>
+    <string name="privacy_policy">Datenschutzbestimmungen anzeigen</string>
     <string name="okay">Ok</string>
     <string name="tunnel_on_ethernet">Tunnel für Ethernet</string>
     <string name="auto_tunneling">Auto-Tunneln</string>
@@ -33,10 +33,10 @@
     <string name="always_on_vpn_support">Always-On VPN erlauben</string>
     <string name="location_services_not_detected">Standortdienste nicht erkannt</string>
     <string name="hint_search_packages">Pakete suchen</string>
-	<string name="vpn_on">VPN an</string>
+    <string name="vpn_on">VPN an</string>
     <string name="vpn_off">VPN aus</string>
     <string name="create_import">Von Grund auf neu erstellen</string>
-    <string name="add_peer">Peer hinzufügen</string>
+    <string name="add_peer">Gegenstelle hinzufügen</string>
     <string name="rotate_keys">Schlüssel rotieren</string>
     <string name="private_key">Privater Schlüssel</string>
     <string name="copy_public_key">Öffentlichen Schlüssel kopieren</string>
@@ -60,14 +60,14 @@
     <string name="email_description">Sende mir eine E-Mail</string>
     <string name="error_root_denied">Root Shell verweigert</string>
     <string name="error_no_file_explorer">Kein Datei-Explorer installiert</string>
-    <string name="location_services_missing_message">Die App erkennt keine auf deinem Gerät aktivierten Standortdienste. Je nach Gerät kann dies dazu führen, dass die Funktion \"Nicht vertrauenswürdiges WLAN\" den WLAN-Namen nicht lesen kann. Möchtest du trotzdem fortfahren?</string>
-    <string name="auto_tunnel_title">Auto-Tunnel Service</string>
+    <string name="location_services_missing_message">Die App erkennt keine auf deinem Gerät aktivierten Standortdienste. Je nach Gerät kann dies dazu führen, dass die Funktion nicht vertrauenswürdiges WLAN den WLAN-Namen nicht lesen kann. Möchtest du trotzdem fortfahren?</string>
+    <string name="auto_tunnel_title">Auto-Tunnel Dienst</string>
     <string name="delete_tunnel_message">Bist du sicher, dass du den Tunnel löschen möchtest?</string>
     <string name="yes">Ja</string>
     <string name="all">alle</string>
     <string name="no_browser_detected">Keinen Browser erkannt</string>
     <string name="open_issue">Issue öffnen</string>
-    <string name="read_logs">Logs lesen</string>
+    <string name="read_logs">Logeinträge lesen</string>
     <string name="auto">(automatisch)</string>
     <string name="incorrect_pin">PIN nicht korrekt</string>
     <string name="pin_created">PIN erfolgreich erstellt</string>
@@ -89,7 +89,7 @@
     <string name="restart_on_ping">Neustart bei PING Fehler (Beta)</string>
     <string name="edit_tunnel">Tunnel bearbeiten</string>
     <string name="set_primary_tunnel">Als Primären Tunnel setzen</string>
-	<string name="vpn_channel_name">VPN Benachrichtigungskanal</string>
+    <string name="vpn_channel_name">VPN Benachrichtigungskanal</string>
     <string name="turn_off_tunnel">Aktion erfordert deaktivierten Tunnel</string>
     <string name="kernel">Kernel</string>
     <string name="use_kernel">Kernelmodul verwenden</string>
@@ -115,23 +115,23 @@
     <string name="chat_description">Tritt der Community bei</string>
     <string name="set_custom_ping_cooldown">Ping-Neustart-Cooldown (sek)</string>
     <string name="set_custom_ping_ip">Benutzerdefinierte Ping-IP einstellen</string>
-    <string name="default_ping_ip">(optional, Vorgabe ist peers)</string>
+    <string name="default_ping_ip">(optional, Standardwert: Gegenstelle)</string>
     <string name="set_custom_ping_internal">Pingintervall (sek)</string>
     <string name="always_on_message2">um sicherzustellen, dass Always-on VPN für alle anderen Apps ausgeschaltet ist und versuche es erneut</string>
     <string name="tunnel_required">Feature erfordert mindestens einen Tunnel</string>
     <string name="sec">Sek</string>
     <string name="app_settings">App-Einstellungen</string>
-    <string name="background_location_message2">um sicherzustellen, dass diese Berechtigungen aktiviert sind.</string>
+    <string name="background_location_message2">um sicherzustellen, dass diese Berechtigungen aktiviert sind</string>
     <string name="root_accepted">Root-Shell akzeptiert</string>
     <string name="show_amnezia_properties">Amnezia-Eigenschaften anzeigen</string>
     <string name="never">nie</string>
     <string name="handshake">Handshake</string>
     <string name="vpn_denied_dialog_title">Genehmigung verweigert</string>
-    <string name="logs">Logs</string>
+    <string name="logs">Logeinträge</string>
     <string name="kernel_not_supported">Kernel nicht unterstützt</string>
     <string name="trusted_wifi_names">Vertrauenswürdige WLAN Namen</string>
     <string name="requires_app_relaunch">Diese Änderung erfordert einen Neustart der App. Möchten Sie fortfahren?</string>
-	<string name="use_root_shell_for_wifi">Root-Shell verwenden, um WLAN-Namen zu ermitteln</string>
+    <string name="use_root_shell_for_wifi">Root-Shell verwenden, um WLAN-Namen zu ermitteln</string>
     <string name="light">Hell</string>
     <string name="add_wifi_name">WLAN Namen hinzufügen</string>
     <string name="dark">Dunkel</string>
@@ -160,4 +160,28 @@
     <string name="use_wildcards">Wildcards für Namen verwenden</string>
     <string name="stop_auto">Auto-Tunnel stoppen</string>
     <string name="monitoring_state_changes">Überwache Statusänderungen</string>
+    <string name="stop_on_no_internet">Stoppen wenn keine Internetverbindung besteht</string>
+    <string name="ethernet_tunnel">Ethernet Tunnel</string>
+    <string name="set_ethernet_tunnel">Als Ethernet Tunnel setzten</string>
+    <string name="native_kill_switch">Nativer Notschalter</string>
+    <string name="vpn_kill_switch">VPN Notschalter</string>
+    <string name="kill_switch_options">Notschalteroptionen</string>
+    <string name="allow_lan_traffic">LAN Verkehr erlauben</string>
+    <string name="vpn_channel_description">Ein Kanal für VPN-Statusbenachrichtigungen</string>
+    <string name="auto_tunnel_channel_name">Auto-Tunnel-Benachrichtigungskanal</string>
+    <string name="auto_tunnel_channel_description">Ein Kanal für Auto-Tunnel Statusbenachrichtigungen</string>
+    <string name="stop">Stop</string>
+    <string name="splt_tunneling">Tunneling aufteilen</string>
+    <string name="tunnel_specific_settings">Tunnelspezifische Einstellungen</string>
+    <string name="show_scripts">Skripte anzeigen</string>
+    <string name="pre_up">Vor Aktivierung</string>
+    <string name="post_up">Nach Aktivierung</string>
+    <string name="pre_down">Vor Deaktivierung</string>
+    <string name="post_down">Nach Deaktivierung</string>
+    <string name="amnezia_kernel_message">Amnezia nicht verfügbar im Kernel-Modus</string>
+    <string name="enable_amnezia">Amnezia aktivieren</string>
+    <string name="wg_compat_mode">Wireguard Kompatibilitätsmodus</string>
+    <string name="quick_actions">Schnellaktionen</string>
+    <string name="stop_on_internet_loss">Stoppen, wenn die Internetverbindung getrennt wird</string>
+    <string name="bypass_lan_for_kill_switch">LAN umgehen für Notschalter</string>
 </resources>
