--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -28,7 +28,7 @@
     <string name="optional_no_recommend">(необязательно, не рекомендуется)</string>
     <string name="tunneling_apps">Туннелируемые приложения</string>
     <string name="all">все</string>
-    <string name="no_email_detected">Приложение для отправки почты не обнаружено</string>
+    <string name="no_email_detected">Приложение для отправки почты не найдено</string>
     <string name="enter_pin">Введите PIN-код</string>
     <string name="enable_app_lock">Защита приложения</string>
     <string name="restart_on_ping">Перезапуск при сбое пинга (бета)</string>
@@ -46,7 +46,7 @@
     <string name="auto_tunnel_title">Сервис автотуннелирования</string>
     <string name="create_import">Создать с нуля</string>
     <string name="private_key">Закрытый ключ</string>
-	<string name="base64_key">Ключ в base64</string>
+    <string name="base64_key">Ключ в base64</string>
     <string name="error_no_file_explorer">Не найден файловый менеджер</string>
     <string name="delete_tunnel_message">Вы действительно хотите удалить этот туннель?</string>
     <string name="version">Версия</string>
@@ -55,14 +55,14 @@
     <string name="error_file_extension">Файл не имеет расширение .conf или .zip</string>
     <string name="random">(случайно)</string>
     <string name="app_name">WG Tunnel</string>
-	<string name="vpn_channel_name">Канал уведомлений VPN</string>
+    <string name="vpn_channel_name">Канал уведомлений VPN</string>
     <string name="tunnels">Туннели</string>
     <string name="okay">Хорошо</string>
     <string name="prominent_background_location_title">Фоновая передача местоположения</string>
     <string name="thank_you">Благодарим вас за использование WG Tunnel!</string>
     <string name="trusted_ssid_value_description">Отправить SSID</string>
     <string name="add_tunnels_text">Добавить из файла или архива</string>
-    <string name="location_services_not_detected">Сервисы местоположения не обнаружены</string>
+    <string name="location_services_not_detected">Сервисы местоположения не найдены</string>
     <string name="turn_on_tunnel">Действие требует наличие активного туннеля</string>
     <string name="add_peer">Добавить пира</string>
     <string name="rotate_keys">Обновить ключи</string>
@@ -96,7 +96,7 @@
     <string name="email_subject">Поддержка WG Tunnel</string>
     <string name="email_description">Отправить письмо автору</string>
     <string name="use_kernel">Использовать модуль режима ядра</string>
-    <string name="no_browser_detected">Браузер не обнаружен</string>
+    <string name="no_browser_detected">Браузер не найден</string>
     <string name="read_logs">Посмотреть журнал</string>
     <string name="auto">(авто)</string>
     <string name="set_primary_tunnel">Назначить как главный туннель</string>
@@ -114,7 +114,7 @@
     <string name="restart_at_boot">Перезапуск при загрузке</string>
     <string name="default_ping_ip">(необязательно, по умолчанию для пиров)</string>
     <string name="app_settings">настройки приложения</string>
-    <string name="background_location_message2">, чтобы убедиться, что эти разрешения предоставлены.</string>
+    <string name="background_location_message2">, чтобы убедиться, что эти разрешения предоставлены</string>
     <string name="always_on_message2">, чтобы убедиться, что функция «Постоянный VPN» отключена для всех других приложений, и повторите попытку</string>
     <string name="background_location_message">Разрешать всё время, пока для работы этой функции требуется доступ на определение местоположения и/или точное местоположение. Смотрите</string>
     <string name="vpn_settings">Системные настройки VPN</string>
@@ -160,4 +160,28 @@
     <string name="monitoring_state_changes">Отслеживание изменений состояния</string>
     <string name="enable_local_logging">Включить ведение журнала</string>
     <string name="add_from_clipboard">Добавить из буфера обмена</string>
+    <string name="auto_tunnel_channel_name">Канал уведомлений автотуннеля</string>
+    <string name="show_scripts">Показать сценарии</string>
+    <string name="amnezia_kernel_message">Amnezia недоступна в режиме ядра</string>
+    <string name="enable_amnezia">Использовать Amnezia</string>
+    <string name="wg_compat_mode">Режим совместимости WG</string>
+    <string name="quick_actions">Быстрые действия</string>
+    <string name="stop_on_no_internet">Остановить без интернета</string>
+    <string name="stop_on_internet_loss">Остановить туннель при потере интернета</string>
+    <string name="ethernet_tunnel">Туннель для Ethernet</string>
+    <string name="set_ethernet_tunnel">Назначить как туннель для Ethernet</string>
+    <string name="native_kill_switch">Штатное экстренное отключение</string>
+    <string name="vpn_kill_switch">Экстренное отключение VPN</string>
+    <string name="kill_switch_options">Настройка экстренного отключения</string>
+    <string name="allow_lan_traffic">Разрешать трафик LAN</string>
+    <string name="bypass_lan_for_kill_switch">Обход LAN при экстренном отключении</string>
+    <string name="vpn_channel_description">Канал уведомлений о состоянии VPN</string>
+    <string name="auto_tunnel_channel_description">Канал уведомлений о состоянии автотуннеля</string>
+    <string name="stop">стоп</string>
+    <string name="splt_tunneling">Раздельное туннелирование</string>
+    <string name="tunnel_specific_settings">Специальные настройки туннеля</string>
+    <string name="pre_up">До активации</string>
+    <string name="post_up">После активации</string>
+    <string name="pre_down">До деактивации</string>
+    <string name="post_down">После деактивации</string>
 </resources>
