fix: make ping aware of network availability
add basic tunnel error messages

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -202,4 +202,5 @@
 	<string name="remove_amnezia_compatibility">Remove Amnezia compatibility</string>
 	<string name="exclude_lan">Exclude LAN</string>
 	<string name="include_lan">Include LAN</string>
+    <string name="error_tunnel_start">Failed to starting tunnel</string>
 </resources>
