fix: tile titles not localized
closes #537

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -203,4 +203,6 @@
 	<string name="exclude_lan">Exclude LAN</string>
 	<string name="include_lan">Include LAN</string>
     <string name="error_tunnel_start">Failed to starting tunnel</string>
+    <string name="tunnel_control">Tunnel control</string>
+	<string name="auto_tunnel">Auto-tunnel</string>
 </resources>
