--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -206,4 +206,6 @@
     <string name="tunnel_control">Tunnel control</string>
 	<string name="auto_tunnel">Auto-tunnel</string>
     <string name="kill_switch_off">Stop kill switch on trusted</string>
+	<string name="server_ipv4">IPv4 hostname resolution</string>
+	<string name="prefer_ipv4">Prefer IPv4 connection</string>
 </resources>
