--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -208,4 +208,8 @@
     <string name="kill_switch_off">Stop kill switch on trusted</string>
 	<string name="server_ipv4">IPv4 hostname resolution</string>
 	<string name="prefer_ipv4">Prefer IPv4 connection</string>
+    <string name="dns_error">Failed to resolve endpoint DNS.</string>
+	<string name="start_failed_config">Failed to start tunnel with config error.</string>
+	<string name="unauthorized">Failed to start tunnel, unauthorized.</string>
+	<string name="tunne_start_failed_title">Tunnel failure</string>
 </resources>
