fix: tunnel tile state

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -212,4 +212,5 @@
 	<string name="start_failed_config">Failed to start tunnel with config error.</string>
 	<string name="unauthorized">Failed to start tunnel, unauthorized.</string>
 	<string name="tunne_start_failed_title">Tunnel failure</string>
+	<string name="multiple">Multiple</string>
 </resources>
