feat: add export as amnezia or wg

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -213,4 +213,6 @@
 	<string name="unauthorized">Failed to start tunnel, unauthorized.</string>
 	<string name="tunne_start_failed_title">Tunnel failure</string>
 	<string name="multiple">Multiple</string>
+    <string name="export_amnezia">Export as Amnezia</string>
+	<string name="export_wireguard">Export as WireGuard</string>
 </resources>
